#296 Fix <Select/> overflow on mobile (ACTUALLY)

--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -72,6 +72,8 @@
 
     &-list {
       padding: calc(0.5rem - var(--border-width));
+      overflow-y: auto;
+      max-height: var(--available-height);
     }
 
     &-item {
